--- a/Peroline/peroline/peroline.csproj
+++ b/Peroline/peroline/peroline.csproj
@@ -13,6 +13,7 @@
     <Folder Include="Tests\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.10" />
     <PackageReference Include="xunit" Version="2.4.1" />
   </ItemGroup>
 </Project>
