--- a/Peroline/peroline.ConsoleApp/peroline.ConsoleApp.csproj
+++ b/Peroline/peroline.ConsoleApp/peroline.ConsoleApp.csproj
@@ -1,23 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Retry\" />
-    <None Remove="Tests\" />
+    <ProjectReference Include="..\peroline\peroline.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="FaultTolerance\" />
-    <Folder Include="Tests\" />
-  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.10">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.10" />
-    <PackageReference Include="xunit" Version="2.4.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Db\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Db\" />
   </ItemGroup>
 </Project>
